[gd_scene load_steps=2 format=3 uid="uid://dxgko0bcehgd6"]

[ext_resource type="Script" path="res://PlayerInteractionController/PlayerInteractionController.gd" id="1_ethe1"]

[node name="PlayerInteractionController" type="Node3D"]
script = ExtResource("1_ethe1")

[node name="Messages" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -28.0
offset_right = 64.5
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="InfoMessage" type="Label" parent="Messages"]
layout_mode = 2
horizontal_alignment = 1

[node name="SubMessage" type="Label" parent="Messages"]
layout_mode = 2
horizontal_alignment = 1
